--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html"%}
 {% block title %}
-Hand Sign Digit Recognition
+DEEP LEARNING MODEL
 {% endblock %}
 
 {% block content %}
@@ -24,8 +24,12 @@ Hand Sign Digit Recognition
         <button type="submit" id="imageResult" name="imageResult">Upload</button>
     </form>
 </div>
-
-
+<br>
+<div class="container2">
+    <h6>powered by</h6>
+    <br>
+    <h3>VitalCare+</h3>
+</div>
 
 
 
