--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,7 +1,7 @@
 body {
-    background-image: url('https://images.pexels.com/photos/287227/pexels-photo-287227.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+    background-repeat: repeat-y;
+    background-image: linear-gradient(180deg, #12343b 0%, #2d545e 50%, #c89666 100%, #e1b382 0%);
     background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
     font-family: Arial, sans-serif;
     color: #fff;
@@ -11,13 +11,43 @@ body {
 }
 
 .container {
-    max-width: 400px;
+    max-width: 250px;
     margin: 0 auto;
-    padding: 20px;
-    background-color: rgba(0, 0, 0, 0.7);
+    padding: 40px;
+    background-image: linear-gradient(360deg, #12343b 0%, #2d545e 50%, #c89666 100%, #e1b382 0%);
+}
+
+.container2 {
+    text-align: center;
+    max-width: 250px;
+    margin: 0 auto;
+    padding: 40px;
+    background-image: linear-gradient(360deg, #12343b 0%, #2d545e 50%, #c89666 100%, #e1b382 0%);
 }
 
 h1 {
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+}
+
+h3 {
+    text-align: center;
+}
+
+h3 {
+
+    text-align: center;
+    background-image: linear-gradient(360deg, #12343b 0%, #2d545e 50%, #c89666 100%, #e1b382 0%);
+}
+
+h6 {
+    text-align: center;
+}
+
+p {
     text-align: center;
 }
 
@@ -38,7 +68,7 @@ button[type="submit"] {
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: #4caf50;
+    background-color: #2d545e;
     border: none;
     color: #fff;
     font-size: 16px;
@@ -46,5 +76,5 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #12343b;
 }
