--- a/templates/result.html
+++ b/templates/result.html
@@ -24,4 +24,9 @@ Prediction - Hand Sign Digit Recognition
         {% endif %}
     </header>
 </div>
+<div class="container2">
+    <h6>powered by</h6>
+    <br>
+    <h3>VitalCare+</h3>
+</div>
 {% endblock %}
