--- a/templates/result.html
+++ b/templates/result.html
@@ -18,16 +18,21 @@ Prediction - Hand Sign Digit Recognition
     <header class="text-white text-center">
         <h1 class="display-5">Prediction</h1>
         {% if predictions %}
-        <h2 class="display-4 text-light font-weight-bold">{{predictions}}</h2>
+        <h2 class="display-6 text-light font-weight-bold">{{predictions}}</h2>
+        <h6 class="display-6 text-light font-weight-bold">By Ahmed Ayman EL-Saey</h6>
         {% else %}
         <h2 class="display-4 text-light font-weight-bold">{{err}}</h2>
         {% endif %}
     </header>
 </div>
- <br>
-<div class="container2">
-    <h6>powered by</h6>
-    <br>
-    <h3>VitalCare+</h3>
-</div>
+
+<br>
+<br>
+<br>
+<br>
+
+
+<h6>powered by</h6>
+<h3>VitalCare+</h3>
+
 {% endblock %}
